# tutabridge

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  SDK_PRS.md  dev.sh
.github/workflows/: ci.yml  release.yml
crates/bridge/: Cargo.toml
crates/bridge/examples/: test_2fa.rs
crates/bridge/src/: backup.rs  body_cache.rs  bridge.rs  config.rs  event_handler.rs  governed_client.rs  lib.rs  mcp.rs  net.rs  store.rs  sync.rs  tls.rs  tuta.rs  util.rs
crates/bridge/src/imap/: mod.rs  search.rs  session.rs
crates/bridge/src/mail/: bodystructure.rs  mod.rs  parser.rs  rfc2822.rs
crates/bridge/src/smtp/: mod.rs
packaging/aur/: PKGBUILD  README.md
packaging/aur/tutabridge-bin/: .SRCINFO  PKGBUILD
packaging/aur/tutabridge-git/: .SRCINFO  PKGBUILD
packaging/systemd/: tutabridge.service
scripts/: test_imap.py
src/: config.rs  main.rs  tls.rs  tuta.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/imap/: mod.rs  session.rs
src/mail/: rfc2822.rs
src/smtp/: mod.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css  types.ts
ui/src/components/: BackupPanel.tsx  ConfigPanel.tsx  ConnectionPanel.tsx  Dashboard.tsx  LogsPanel.tsx
ui/src/hooks/: useBridge.ts
