[workspace]
members = ["crates/bridge", "src-tauri"]
exclude = ["tuta-repo"]
resolver = "2"

[package]
name = "tutabridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"

[dependencies]
tutabridge-core = { path = "crates/bridge" }
tuta-sdk = { path = "tuta-repo/tuta-sdk/rust/sdk", features = ["net"] }
tokio = { version = "1.43", features = ["full"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
rpassword = "7"
