[package]
name = "tutabridge-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tutabridge-core = { path = "../crates/bridge" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.43", features = ["full"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
