[package]
name = "tutabridge-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
license = "GPL-3.0-or-later"

[dependencies]
tuta-sdk = { path = "../../tuta-repo/tuta-sdk/rust/sdk", features = ["net"] }

tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"

log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"

crypto-primitives = { path = "../../tuta-repo/tuta-sdk/rust/crypto-primitives" }

keyring = { version = "3", features = ["apple-native"] }
rand = "0.8"

thiserror = "2.0"
base64 = "0.22"
dirs = "6"
anyhow = "1"
rand_core = "0.6"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
hex = "0.4"

[dev-dependencies]
tuta-sdk = { path = "../../tuta-repo/tuta-sdk/rust/sdk", features = ["net", "logging", "testing"] }
rpassword = "7"
